kafka-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-nodeport
  labels:
    app: kafka
spec:
  type: NodePort
  selector:
    service: kafka
  ports:
    - name: kafka-internal
      port: 29092
      targetPort: 29092
      nodePort: 30092
    - name: kafka-external
      port: 9092
      targetPort: 9092
      nodePort: 30093
