kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  selector:
    service: kafka
  ports:
    - port: 29092
      name: internal
    - port: 9092
      name: external
    - port: 39093
      name: local
