spring-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-kafka
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-kafka
  template:
    metadata:
      labels:
        app: spring-kafka
    spec:
      containers:
        - name: spring-kafka
          image: toanhhg123/spring-kafka:oHrxijU
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spring-kafka
spec:
  selector:
    app: spring-kafka
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-kafka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: spring-kafka.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-kafka
                port:
                  number: 8080
